css/custom.css
body {
  background-color: rgb(0, 0, 0);
  display: flex;
  flex-direction: column;
  min-height: 100vh;
  margin:0;
}

body h1 {
  color: white;
}

.container {
  background-color:trasnparent;
}

.hero {
  width: 100%;
  box-sizing: border-box;
  margin: 0%;
  display: block;
}

#circle-container {
  display: flex;
  border: 2px solid rgb(0, 0, 0);
  justify-content: center;
  align-items: center;
}

#profile-circle {
  margin-right: 2vw;
  margin-left: 3vw;
  margin-top: 5vh;
  position: relative;
  border-radius: 50%;
  width: 300px;
  height: 300px;
  overflow: hidden;
  background-image:linear-gradient(rgb(0, 0, 0), rgb(15, 15, 15), rgba(255, 0, 200, 0.24));
}

.profile-circle::before {
  content: '';
  display: block;
  padding-bottom: 100%;
}

#headshot {
  height: auto;
  width: 100%;
  bottom: -auto;
  position:relative;
  object-fit:cover;
}

#profile-right {
  margin-top: 4vh;
  margin-left: 3vw;
  margin-right: 2vw;
  background-color:rgb(0, 0, 0);
  color: white;
  text-align: center;
}

#profile-text {
  width: 100%;
  margin-top: 1vh;
  background-color:rgb(0, 0, 0);
  color: white;
  text-align: center;
}

.socials-block {
  justify-content: space-evenly;
  display: flex;
}

.social-icon {
  display: inline-block; margin: 0 6%;
}

.about-text {
  padding-top: 5%;
  text-align: center;
  color: white;
}

.about-text p {
  font-size: 1.2em;
}

h3 {
  color: #1EAEDB;
  text-align: center;
}

.project {
  object-fit:fill;
  max-width:100%;
  max-height: auto;
  transform: skewX(-5deg);
}

#contact {
  margin-bottom: 1vh;
}

#hello {
  font-family: 'Space Mono', monospace;
  font-size: xx-large;
}

#contact-form {
  color: #1EAEDB;
  display: none;
}



/* Larger than mobile */
@media (min-width: 400px) {
}

/* Larger than phablet */
@media (min-width: 550px) {
}

/* Larger than tablet */
@media (min-width: 750px) {
  
}

/* Larger than desktop */
@media (min-width: 1000px) {
  .parallellogram {
      transform: rotate(90deg);
      display:inline-block;
      margin-left: 60%;
  }

  .hero {
    width: 100%;
    box-sizing: border-box;
    margin: 0%;
    display: flex;
  }
  
  #circle-container {
    display: flex;
    border: 2px solid black;
    justify-content: center;
    align-items: center;
  }
  
  #profile-circle {
    margin-right: 2vw;
    margin-left: 3vw;
    margin-top: 10vh;
    position: relative;
    border-radius: 50%;
    width: 300px;
    height: 300px;
    overflow: hidden;
    background-image:linear-gradient(rgb(0, 0, 0), rgb(15, 15, 15), rgba(255, 0, 200, 0.24));
  }
  
  .profile-circle::before {
    content: '';
    display: block;
    padding-bottom: 100%;
  }
  
  #headshot {
    height: auto;
    width: 100%;
    bottom: -auto;
    position:relative;
    object-fit:cover;
  }
  
  #profile-right {
    margin-top: 12vh;
    margin-left: 3vw;
    margin-right: 2vw;
    background-color:rgb(0, 0, 0);
    color: white;
    text-align: center;
  }

  #profile-text {

  }
  
  .socials-block {
    display: flex;
  }
  
  .social-icon {
    display: inline-block; margin: 0 6%;
  }  

}

/* Larger than Desktop HD */
@media (min-width: 1200px) {}


#lastcontainer input {
  position: absolute;
  opacity: 0;
  z-index: -1;
}

.row {
  display: flex;
}
.row .col {
  flex: 1;
}
.row .col:last-child {
  margin-left: 1em;
}

/* Accordion styles */
.tabs {
  border-radius: 8px;
  overflow: hidden;
  box-shadow: 0 4px 4px -2px rgba(0, 0, 0, 0.5);
}

.tab {
  width: 100%;
  color: white;
  overflow: hidden;
}
.tab-label {
  display: flex;
  justify-content: space-between;
  padding: 1em;
  background: #2c3e50;
  font-weight: bold;
  cursor: pointer;
  /* Icon */
}
.tab-label:hover {
  background: #1a252f;
}
.tab-label::after {
  content: "❯";
  width: 1em;
  height: 1em;
  text-align: center;
  transition: all 0.35s;
}
.tab-content {
  max-height: 0;
  padding: 0 1em;
  color: #ffffff;
  background: rgb(0, 0, 0);
  transition: all 0.35s;
}
.tab-close {
  display: flex;
  justify-content: flex-end;
  padding: 1em;
  font-size: 0.75em;
  background: #2c3e50;
  cursor: pointer;
}
.tab-close:hover {
  background: #1a252f;
}

input:checked + .tab-label {
  background: #1a252f;
}
input:checked + .tab-label::after {
  transform: rotate(90deg);
}
input:checked ~ .tab-content {
  max-height: 100vh;
  padding: 1em;
}

#lastcontainer {
    padding-bottom: 5%;
}

/* ahhahahahahahhahaha */

.underlined {
  color: rgb(255, 255, 255);
  flex: 1;
  font-size: 1em;
  line-height: 1.2;
  text-decoration: none;
  background-image: linear-gradient(to right, yellow 0, yellow 100%);
  background-position: 0 1.2em;
  background-size: 0 100%;
  background-repeat: no-repeat;
  transition: background 0.5s;
}
.underlined:hover {
  background-size: 100% 100%;
}
.underlined--thin {
  background-image: linear-gradient(to right, black 0, black 100%);
}
.underlined--thick {
  background-position: 0 -0.1em;
}
.underlined--offset {
  background-position: 0 0.2em;
  box-shadow: inset 0 -0.5em 0 0 white;
}
.underlined--gradient {
  background-position: 0 -0.1em;
  background-image: linear-gradient(to right, yellow 0, lightgreen 100%);
}
.underlined--reverse {
  background-position: 100% -0.1em;
  transition: background 1s;
  background-image: linear-gradient(to right, yellow 0, yellow 100%);
}

